--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,6 +8,9 @@
       <a mat-list-item [routerLink]="['/users']" (click)="layout.close()" routerLinkActive="nav-active">
         <mat-icon>account_box</mat-icon>
         Users</a>
+      <a mat-list-item [routerLink]="['/company-summaries']" (click)="layout.close()" routerLinkActive="nav-active">
+        <mat-icon>info</mat-icon>
+        Company Summaries</a>
     </mat-nav-list>
   </td-navigation-drawer>
   <td-layout-nav toolbarTitle="Menu" navigationRoute="/">
